# imencv

./: .gitmodules  CMakeLists.txt  main.cpp
docs/: LICENSE  readme.md
src/: app.cpp  app.h  enet_app.cpp  enet_app.h  main.cpp  nb_cam.h  network_utils.h
src/msmf/: nb_cam.cpp
unused/: nb_cam.cpp
unused/art/: icon.pixi
unused/installer/: installer.iss
